// Copyright 2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package vanguard.test.v1;

import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ContentService {
  // Index returns a html index page at the given path.
  rpc Index(IndexRequest) returns (google.api.HttpBody) {
    option (google.api.http) = {get: "/{page=**}"};
  }
  // Upload a file to the given path.
  rpc Upload(stream UploadRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/{filename=**}:upload"
      body: "file"
    };
  }
  // Download a file from the given path.
  rpc Download(DownloadRequest) returns (stream DownloadResponse) {
    option (google.api.http) = {
      get: "/{filename=**}:download"
      response_body: "file"
    };
  }
  // Subscribe to updates for changes to content.
  rpc Subscribe(stream SubscribeRequest) returns (stream SubscribeResponse);
}

message IndexRequest {
  // The path to the page to index.
  string page = 1;
}

message UploadRequest {
  // The path to the file to upload.
  string filename = 1;
  // The file contents to upload.
  google.api.HttpBody file = 2;
}

message DownloadRequest {
  // The path to the file to download.
  string filename = 1;
}

message DownloadResponse {
  // The file contents.
  google.api.HttpBody file = 1;
}

message SubscribeRequest {
  repeated string filename_patterns = 1;
}

message SubscribeResponse {
  string filename_changed = 1;
  google.protobuf.Timestamp update_time = 2;
  bool deleted = 3;
}
